--- a/res/css/global.css
+++ b/res/css/global.css
@@ -121,7 +121,7 @@ pre{padding: 10px 15px; margin: 10px 0; font-size: 12px; border-left: 6px solid 
 .fly-avatar img{display: block; width: 45px; height: 45px; margin: 0; border-radius: 2px;}
 
 /* 徽章 */
-.fly-badge-vip{height: 16px; line-height: 16px; padding: 0 3px; background-color: #FF5722; color: #fff; border-radius: 2px;}
+.fly-badge-vip{height: 20px; padding: 0 3px; background-color: #FF5722; color: #fff; border-radius: 2px;}
 .fly-badge-accept{height: 18px; line-height: 18px; padding: 0 5px !important; background-color: #5FB878; border-radius: 2px;}
 
 /* 赞助商 */
